# ros-econ-trigger-camera

./: CMakeLists.txt  README.md  package.xml
docs/qtcam-master/src/: see3cam_cu1330m.h
launch/: trigger_cam.launch
src/: trigger_cam_node.cpp
