<?xml version="1.0"?>
<package format="2">
  <name>trigger_cam</name>
  <version>0.0.1</version>
  <description>Simple OpenCV-based camera node for triggered UVC cameras</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <exec_depend>rosparam</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <build_depend>opencv4</build_depend>
  <exec_depend>opencv4</exec_depend>
</package>
