<?xml version="1.0"?>
<package format="2">
  <name>trigger_cam</name>
  <version>1.0.0</version>
  <description>See3CAM_24CUG camera node with trigger mode support</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export></export>
</package>
